# cmake_cpp_dynamic_loading

./: .gitignore  CMakeLists.txt  cmake_config.h.in  main.cpp  readme.org
meteo/: CMakeLists.txt  meteo.c
meteo_operations/: CMakeLists.txt  OperationBase.cpp  OperationBase.h
plugins/: CMakeLists.txt
plugins/AbsoluteValue/: AbsoluteValue.cpp  AbsoluteValue.h  CMakeLists.txt
pyinterface/: load_lib.py
pymeteo/: CMakeLists.txt  pymeteo.c
pyspooki/: CMakeLists.txt  pyspooki_interface.cpp  test_loading.py  test_loading.py.in  test_python.sh.in
pyspooki_interface/: CMakeLists.txt  absval.cpp  absval.h  interface_classes.cpp  interface_classes.h  numpy_capsule_way.cpp  numpy_initial_attempts.cpp  numpy_legit_attempts.cpp  numpy_legit_attempts.h  pyspooki_interface.cpp  pyspooki_interface.h  setup_test_environment.in.sh  test_interface_classes.in.py  test_loading.py.in  test_numpy.in.py  test_numpy.in.sh  test_numpy_capsule_way.in.py  test_numpy_initial_attempts.in.py  test_numpy_legit_attempts.in.py  test_python.sh.in  test_receive_numpy_array.in.py
pyspooki_interface/absval/: CMakeLists.txt  test_absval.in.py
pyspooki_interface/interface_classes/: CMakeLists.txt  interface_classes.cpp  test_interface_classes.in.py
pyspooki_interface/numpy_capsule_way/: CMakeLists.txt  numpy_capsule_way.cpp  test_numpy_capsule_way.in.py
pyspooki_interface/numpy_default_object_way/: CMakeLists.txt  numpy_default_object_way.cpp  test_numpy_default_object_way.in.py
pyspooki_interface/numpy_initial_attempts/: CMakeLists.txt  numpy_initial_attempts.cpp  test_numpy_initial_attempts.in.py
pyspooki_interface/numpy_legit_attempts/: CMakeLists.txt  numpy_legit_attempts.cpp  test_numpy_legit_attempts.in.py
pyspooki_interface/receive_numpy_array/: CMakeLists.txt  receive_numpy_array.cpp
spooki_logging/: CMakeLists.txt  spooki_logging.cpp  spooki_logging.hpp  test_spooki_logging.cpp
